--- a/frontend/style.css
+++ b/frontend/style.css
@@ -1,4 +1,5 @@
 .col {
+    padding: 20px;
 }
 
 .content {
@@ -17,7 +18,7 @@
 }
 
 .goodSet {
-    background-color: #60a147; 
+    background-color: #60a147;
 }
 
 .easySet {
@@ -30,4 +31,8 @@
 
 table, th, td {
     border: 1px solid black;
+}
+
+* {
+    font-family: sans-serif;
 }
